# miniproject1

./: .gitignore  AGENTS.md  README.md  auth-flow.md  docker-compose.prod.yaml  docker-compose.yaml  project_content tuan1.md  project_content tuan2.md  test_api.py
auth_api_demo/: README.md  config.py  database.py  dependencies.py  main.py  redis_client.py  requirements.txt
auth_api_demo/models/: user_model.py
auth_api_demo/repositories/: user_repository.py
auth_api_demo/routers/: auth.py  users.py
auth_api_demo/schemas/: token_schema.py  user_schema.py
auth_api_demo/utils/: jwt_handler.py  password_hash.py
backend/: .env.example  .gitignore  Dockerfile.dev  Dockerfile.prod  alembic.ini  docker-compose mongo.yaml  docker-compose mysql.yaml  docker-compose postgre.yaml  docker-compose.yaml  entrypoint.sh  mypy.ini  pyproject.toml  ruff.toml  test_api.py
backend/alembic/: env.py
backend/alembic/versions/: 001_create_users_table.py
backend/auth_api_demo/: README.md  config.py  database.py  main.py  requirements.txt
backend/auth_api_demo/routers/: auth.py
backend/auth_api_demo/schemas/: token_schema.py
backend/auth_api_demo/services/: auth_service.py  user_service.py
frontend/: .env.example  Dockerfile.prod  next.config.ts  package-lock.json
frontend/app/: layout.tsx  page.tsx
frontend/app/login/: page.tsx
frontend/app/register/: page.tsx
frontend/components/: auth-context.tsx
frontend/lib/: auth.ts
nginx/: Dockerfile  entrypoint.sh  nginx.conf
