[project]
name = "auth-api-demo"
version = "0.1.0"
description = "A FastAPI authentication API demo"
readme = "auth_api_demo/README.md"
requires-python = ">=3.10"
authors = [
    { name = "Le Hoang Linh", email = "hzyugioh@gmail.com" }
]
dependencies = [
    "fastapi>=0.100.0",
    "uvicorn>=0.22.0",
    "sqlalchemy>=2.0.0",
    "pyjwt[crypto]>=2.8.0",
    "bcrypt>=4.0.0",
    "redis>=5.0.0",
    "pydantic-settings>=2.0.0",
    "psycopg2-binary>=2.9.0",
]

[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"
